# ucas-course

./: .gitignore  README.md
研1上/操作系统高级教程/: 笔记1.md
研1上/操作系统高级教程/思考题/: 中科院操作系统高级教程-思考题-2015最新完整版.docx
研1上/操作系统高级教程/资料/Linux内核完全注释(内核版本0.11)及源码/linux-0.11/: .tags  .tags_sorted_by_file
研1上/操作系统高级教程/资料/汇编知识/汇编知识/: at&t汇编.ppt
研1上/模式识别/: 笔记1.md
研1上/矩阵分析与应用/: 作业1.md  作业2.md  作业4.md
研1上/网络数据挖掘/: 笔记1.md
研1上/网络数据挖掘/luop_1/: 3_Content-based+Recommendation.pptx
研1上/网络数据挖掘/第五讲/: 6+Explaining.pptx  8+Evaluatoin.pptx
研1上/网络数据挖掘/第六讲/: 12+Summary.pptx  9+Matrix+Factorization.pptx
研1上/网络数据挖掘/第四讲/: 2_Non+Personalized+Recommendation.pptx
研1上/网络数据挖掘/罗平/: 4+Knowledge-based+RS.pptx
研1上/计算机算法设计与分析/: homework2.md  homework3.md  homework6.md  封面.doc  笔记1.md  算法讲义.rar
研1上/计算机算法设计与分析/Assignment1/: homework1.md
研1上/计算机算法设计与分析/Lecture-ppt/Lecture-ppt/: 第一章.ppt  第七章.ppt  第三章.ppt  第二章.ppt  第八章.ppt  第四章.ppt
研1上/计算机算法设计与分析/非朴东波/: Lecture-ppt.rar
研1上/计算机算法设计与分析/非朴东波/Lecture-ppt/Lecture-ppt/: 第五章.ppt
研1上/高级人工智能/: 笔记2.md
研1上/高级人工智能/luop_1/: AAI_luop_1_2.pptx
研1上/高级人工智能/luop_2/: AAI_luop_2_4.ppt
研1上/高级人工智能/luop_3/: AAI_luop_3_1.pptx  AAI_luop_3_1_作业答案.pptx
研1上/高级人工智能/luop_5/: 20161122_总结.pptx  20161122_计算智能.pptx
研1上/高级人工智能/第四讲/: AAI_luop_2_1.pptx  AAI_luop_2_3.pptx  AAI_luop_2_4.ppt
研一上/创新与创业管理/: 完成科技转化过程：科学的 IPO 并购.md
研一上/操作系统高级教程/: 笔记1.md
研一上/操作系统高级教程/思考题/: 2016操作系统思考题.txt
研一上/操作系统高级教程/资料/Linux内核完全注释(内核版本0.11)及源码/linux-0.11/: CMakeLists.txt
研一上/操作系统高级教程/资料/Linux内核完全注释(内核版本0.11)及源码/linux-0.11/init/: main.c
研一上/操作系统高级教程/资料/Linux内核完全注释(内核版本0.11)及源码/linux-0.11/kernel/: sched.c  traps.c
研一上/矩阵分析与应用/: 作业4.md  笔记1.md  笔记2.md  笔记3.md
研一上/网络数据挖掘/luop_2/: 5_User-User+Collaborative+Filtering.pptx  7+Item-Item+CF.pptx
研一上/网络数据挖掘/luop_3/: 10+Hybrid.pptx  11+Advanced+Topics.pptx  趋同行为检索.pptx
研一上/计算机算法设计与分析/: homework4.md
研一上/计算机算法设计与分析/非朴东波/: 目录.docx  笔记1.md
研一上/计算机算法设计与分析/非朴东波/Lecture-ppt/Lecture-ppt/: 第六章.ppt
研一上/高级人工智能/luop_1/: AAI_luop_1_3.pptx
研一上/高级人工智能/luop_2/: AAI_luop_2_2.pptx
研一上/高级人工智能/luop_4/: AAI_luop_4_1.pptx
研一下/大数据系统与大规模数据分析/hw2-setup/GraphLite/: README.txt
研一下/大数据系统与大规模数据分析/hw2-setup/hadoop/: WordCount.java
研一下/并行与分布式计算/: 1Chapter+0+课程基本信息.pptx  1Chapter+11.pptx  1Chapter+12.pptx  2Chapter+2-系统设计关注点概论-选讲.pptx  2Chapter+3-交互处理-1进程组织-自学.pptx  2Chapter+3-交互处理-2进程交互.pptx  3Chapter+3-交互处理-3进程协作.pptx
(+1 files in other folders)
